patches toggle overflow style issue

--- a/src/css/guwmi.css
+++ b/src/css/guwmi.css
@@ -1798,7 +1798,6 @@ a.guwmi-tag.disabled {
   position: relative;
   font-size: 0.9rem;
   line-height: 1;
-  overflow: hidden;
 }
 
 /**
