--- a/src/styles/components/inputs/toggle.scss
+++ b/src/styles/components/inputs/toggle.scss
@@ -67,6 +67,5 @@
     position: relative;
     font-size: 0.9rem;
     line-height: 1;
-    overflow: hidden;
   }
 }
